# crunch

./: .gitignore  CMakeLists.txt  Case.cpp  Case.h  NetworkComputation.cpp  NetworkComputation.h  Plotter.cpp  Weights.cpp  Weights.h  activation_functions.cpp  activation_functions.h  common.h  main.cpp  network.cpp  network.h  training.cpp  training.h  utilites.cpp  utilites.h  utilities.cpp  utilities.h  wallace.cpp
math/: activation_functions.cpp  activation_functions.h  metrics.cpp  metrics.h
network/: Network.cpp  Network.h  NetworkComputation.cpp  NetworkComputation.h  Neuron.cpp  Neuron.h  Training.cpp  Training.h  Weights.cpp  Weights.h  activation_functions.cpp  activation_functions.h
outlines/: .jupytext.toml  00_2bits_and.ipynb  00_2bits_and.md  00_2bits_and.py  01_approximation_with_sigmoids.ipynb  run_jupyter.sh
results/: 5sig.txt  5tan.txt  sigmoid.txt
